fixed top navbar wrap on mid-sized screens
Changed @768 to flex-wrap: wrap because on ipads it looked awful with the menu hanging over the right edge. Shouda seen this before.

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -1935,6 +1935,12 @@ blockquote.default {
 //     }
 // }
 
+@media only screen and (min-width: 768px) {
+        .navbar-expand-md>.container, .navbar-expand-md>.container-fluid {
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    }
+}
 
 @media only screen and (max-width: 767px) {
         .service-thumb {
